--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -22,5 +22,4 @@ WORKDIR ${HOME}
 
 # Install extra requirements and aeon based on master branch
 RUN pip install --upgrade pip --no-cache-dir
-RUN pip install llvmlite --ignore-installed
-RUN pip install .[binder]
+RUN pip install aeon[binder]
